--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "react-slideshow-image": "^3.4.6"
+    "react-slideshow-image": "^3.4.6",
+    "react-toastify": "^8.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
