--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,9 @@
     "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
-    "react-router-dom": "^5.2.0",
+    "react-responsive-carousel": "^3.2.22",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
-    "react-slideshow-image": "^3.4.6",
     "react-spinners": "^0.11.0",
     "react-toastify": "^8.0.3"
   },
